<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingBottom="6dip"
    android:paddingTop="4dip" >

    <TextView
        android:id="@+id/rl_qv_first"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/QVA_Column1"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/rl_qv_second"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/QVA_Column2"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/rl_qv_third"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/QVA_Column3"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

</LinearLayout>